<resources>
    <string name="app_name">Volunapp</string>

    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_vacancies">Vagas</string>
    <string name="navigation_title_account">Account</string>
    <string name="navigation_title_settings">Settings</string>
    <string name="navigation_signOut">Sair</string>

    <string name="form_voluntary_title">Bem vindo ao Volunapp</string>
    <string name="form_voluntary_subtitle">Preencha os dados abaixo</string>

    <string name="form_voluntary_name">Nome Completo</string>
    <string name="form_voluntary_adress">Endereço</string>
    <string name="form_voluntary_phone">Telefone</string>
    <string name="form_voluntary_mail">Email</string>

    <string name="volunteering_type">Tipo de vaga</string>
    <string name="volunteering_type_child">Crianças e Jovens</string>
    <string name="volunteering_type_culture">Cultura</string>
    <string name="volunteering_type_elder">Cuidado com idosos</string>
    <string name="volunteering_type_health">Saúde</string>
    <string name="volunteering_type_education">Educação e Esportes</string>
    <string name="volunteering_type_social">Social</string>
    <string name="volunteering_type_animal">Proteção Animal</string>
    <string name="volunteering_type_environment">Meio Ambiente</string>
    <string name="volunteering_type_disabled">Pessoas com defiência</string>

    <string name="register">Cadastrar</string>

    <string name="erro_field_cant_be_empty">Campo não pode estar vazio</string>

    <string name="facebook_app_id">237710673323276</string>
    <string name="fb_login_protocol_scheme">fb237710673323276</string>


    <string name="login_title">Login</string>
    <string name="login_empty_user_password">Informe o usuário e senha</string>
    <string name="login_password_too_short">A senha deve ser maior que 6 caracteres</string>
    <string name="login_invalid_credential">Usuário ou senha incorretos</string>
    <string name="login_verifing">Verificando login..."</string>

    <string name="SignUp_title">SignUp</string>
    <string name="signUp_registering">Registrando..."</string>

    <string name="ResetPassword_title">Recuperar senha</string>
    <string name="ResetPassword_sending">Enviando..."</string>




</resources>